# keyauth-protected-loader

./: .gitignore  CMakeLists.txt  KeyAuthLoader.sln  KeyAuthLoader.vcxproj  KeyAuthLoader.vcxproj.filters  LICENSE  LicenseStorage.hpp  README.md  SECURITY_IMPROVEMENT_PLAN.md  SecureCore.h  console.cpp  console.hpp  includes.hpp  main.cpp  ntp.cpp  ntp.hpp  secure_literals.hpp  security.cpp  security.hpp  security_enhanced.hpp  utils.hpp
.github/workflows/: build.yml
Project/Protection/: AdvancedProtection.cpp  AdvancedProtection.h  DelayedCrash.h  EnvironmentBinding.h  PointerEncryption.h  ProcessCritical.h  Syscalls.h
